--- a/src/app/Master/dashboard/dashboard.component.html
+++ b/src/app/Master/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
-<div class="animated fadeIn mainContainer">
-  <div class="container-fluid">
+<div class="app-body">
+  <main class="main">
+<div class="animated fadeIn ">
+ 
  <div class="row">
 
   <div class="col-lg-12">
@@ -293,7 +295,8 @@
   </div>
       </div>
       </div>
-    </div>
+  
     
   </div>
- 
+</main>
+</div>
