--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -39,6 +39,11 @@
   </li>
 
  
-  <div class="ps__rail-x" style="left: 0px; bottom: 0px;"><div class="ps__thumb-x" tabindex="0" style="left: 0px; width: 0px;"></div></div><div class="ps__rail-y" style="top: 0px; height: 551px; right: 0px;"><div class="ps__thumb-y" tabindex="0" style="top: 0px; height: 234px;"></div></div></ul>
-  <button class="c-sidebar-minimizer c-class-toggler" type="button" data-target="_parent" data-class="c-sidebar-unfoldable"></button>
-  </div>
+  <div class="ps__rail-x" style="left: 0px; bottom: 0px;">
+    <div class="ps__thumb-x" tabindex="0" style="left: 0px; width: 0px;"></div>
+  </div><div class="ps__rail-y" style="top: 0px; height: 551px; right: 0px;">
+    <div class="ps__thumb-y" tabindex="0" style="top: 0px; height: 234px;">
+    </div></div></ul>
+    <button class="c-sidebar-minimizer c-class-toggler" type="button" data-target="_parent" data-class="c-sidebar-unfoldable" (click)="toggleMinimize($event)"></button>
+  
+ </div>
