--- a/src/app/Master/dashboard/dashboard.component.html
+++ b/src/app/Master/dashboard/dashboard.component.html
@@ -132,6 +132,8 @@
           </div>
           <div class="card-footer">
               <button class="btn btn-sm btn-primary" type="submit"><i class="fa fa-dot-circle-o"></i> Submit</button><button class="btn btn-sm btn-danger" type="reset"><i class="fa fa-ban"></i> Reset</button>
+              <button class="btn btn-sm btn-success" type="submit" (click)="alertWithSuccess()"><i class="fa fa-floppy-o"></i> Save Data</button>
+              <button class="btn btn-sm btn-info" type="reset" (click)="confirmBox()"><i class="fa fa-floppy-o"></i> Confirm Save</button>
           </div>
       </div>
     
