--- a/src/app/Master/dashboard/dashboard.component.css
+++ b/src/app/Master/dashboard/dashboard.component.css
@@ -1,10 +1,7 @@
-.mainContainer{
-    animation-name: anim;
-    animation-duration: 5s;
-    }
-    @keyframes anim {
-        0%   { right:100px; top:0px;}
-        50% { right:0px; top:0px;}
-        100% { right:0px; top:0px;}
-      }
-      
+.btnAnimate{     position: absolute;
+  z-index: 9999;
+  left: 231px;
+  top: 8px;
+  height: 46px;
+  width: 38px;
+  opacity: 0;}
