--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,8 @@
 <header class="c-header c-header-light c-header-fixed">
   <div class="c-sidebar-brand d-md-down-none">
-    <div class="logo">Yoekisoft</div>
+    <div class="logo"><img src="assets/images/yoekiLogo.png" /></div>
     </div>
+    
   <button class="c-header-toggler c-class-toggler mfs-3 d-md-down-none" type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true" (click)="toggleClass($event)">
     <i class="fa fa-bars" aria-hidden="true"></i>
   </button>
