--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,17 +1,10 @@
-.mainContainer{padding-top:62px; width: 100%; padding-left:250px}
+.mainContainer{padding-top:62px; width: 80%; float: right; z-index: 9998;
+    position: absolute; right:0}
 .mainFullContainer{padding-left:0}
 span.c-sidebar-nav-icon{margin-top:-10px}
 .help-block{color:#dc4545}
 button{margin-right: 5px !important;}
-.main{
-    animation-name: anim;
-    animation-duration: 5s;
-    }
-    @keyframes anim {
-        0%   { right:-256px; top:0px;}
-        50% { right:0px; top:0px;}
-        100% { right:0px; top:0px;}
-      }
+
       .multiselect-dropdown .dropdown-btn .selected-item {
         border: 1px solid #0d5f69 !important;
         background: #0d5f69 !important;
@@ -28,7 +21,7 @@ button{margin-right: 5px !important;}
     article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
         display: block;
     }
- .main{margin-left: 260px  !important; padding-top: 60px; overflow:hidden; -ms-flex: 1;
+ .main{ padding-top: 57px; -ms-flex: 1;
     flex: 1;
     min-width: 0;}
  .sidebar-fixed.sidebar-hidden .main, .sidebar-fixed.sidebar-hidden .app-footer {
@@ -45,6 +38,7 @@ button{margin-right: 5px !important;}
     .animated {
         -webkit-animation-duration: 1s;
         animation-duration: 1s;
+        background:#eee;
     }
     .app-footer, .app-header, .aside-menu, .main, .sidebar {
         transition: margin-left .25s,margin-right .25s,width .25s,flex .25s;
