--- a/src/app/Master/dashboard/dashboard.component.html
+++ b/src/app/Master/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="app-body">
   <button (click)="changeState()" class="btnAnimate" type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true"></button>
  
-  <main class="main mainContainer" [@changeDivSize]=currentState>
+  <main class="mainContainer" [@changeDivSize]=currentState>
 <div class="animated fadeIn ">
  
  <div class="row">
