--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,4 +1,5 @@
-.mainContainer{padding-top:62px; width: 80%; float: right; z-index: 1050;
+body{overflow-x:hidden}
+.mainContainer{padding-top:62px; width: 80%; float: right; z-index: 1031;
     position: absolute; right:0}
 .mainFullContainer{padding-left:0}
 span.c-sidebar-nav-icon{margin-top:-10px}
