--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,7 @@
 <header class="c-header c-header-light c-header-fixed">
+  <button appsidebartoggler="" type="button" class="navbar-toggler d-lg-none">
+    <span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
+  </button>
   <div class="c-sidebar-brand d-md-down-none">
     <div class="logo"><img src="assets/images/yoekiLogo.png" /></div>
     </div>
