--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -51,10 +51,11 @@ button{margin-right: 5px !important;}
     html:not([dir=rtl]) .c-sidebar:not(.c-sidebar-lg-show)> .main{
         margin-left: 0px !important;
     }
-@media (min-width: 992px){
+@media (max-width: 992px){
 html:not([dir=rtl]) .sidebar-lg-show.sidebar-fixed.sidebar-minimized .app-footer, html:not([dir=rtl]) .sidebar-lg-show.sidebar-fixed.sidebar-minimized .main, html:not([dir=rtl]) .sidebar-show.sidebar-fixed.sidebar-minimized .app-footer, html:not([dir=rtl]) .sidebar-show.sidebar-fixed.sidebar-minimized .main {
     margin-left: 50px;
 }
+.mainContainer{width:100%}
 }
 @media (min-width: 992px){
 html:not([dir=rtl]) .sidebar-lg-show.sidebar-fixed .app-footer, html:not([dir=rtl]) .sidebar-lg-show.sidebar-fixed .main, html:not([dir=rtl]) .sidebar-show.sidebar-fixed .app-footer, html:not([dir=rtl]) .sidebar-show.sidebar-fixed .main {
