--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,9 +1,11 @@
 body{overflow-x:hidden}
-.mainContainer{padding-top:62px; width: 80%; float: right; z-index: 1031;
+.mainContainer{padding-top:62px; width: 83%; float: right; z-index: 1031;
     position: absolute; right:0}
 .mainFullContainer{padding-left:0}
 span.c-sidebar-nav-icon{margin-top:-10px}
 .help-block{color:#dc4545}
+.c-sidebar-nav-title {
+     margin-top: 0px !important;}
 button{margin-right: 5px !important;}
 
       .multiselect-dropdown .dropdown-btn .selected-item {
