--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
   <button class="c-header-toggler c-class-toggler mfs-2 d-md-down-none" type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true" (click)="toggleClass($event)">
     <i class="fa fa-bars" aria-hidden="true"></i>
   </button>
-  <ol class="breadcrumb border-0 m-0 px-0 px-md-3">
+  <ol class="breadcrumb border-0 m-0 px-0 px-md-3 pt-3">
     <li class="breadcrumb-item">Home</li>
     <li class="breadcrumb-item active"><a href="#">Dashboard</a></li>
     
