--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -36,7 +36,7 @@
               <div class="card-body text-center">
                 <div>
                   <!-- <h2>Yoekisoft</h2> -->
-                  <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h5>
+                  <h5 style="font-family:calibri">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h5>
                   <!-- <button type="button" class="btn btn-primary active mt-3">Register Now!</button> -->
                 </div>
               </div>
