--- a/src/app/Master/country/country.component.css
+++ b/src/app/Master/country/country.component.css
@@ -1,68 +1,5 @@
-.card {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    margin-bottom: 1.5rem;
-    word-wrap: break-word;
-    background-clip: border-box;
-     border: 1px solid; 
-    border-radius: .25rem;
-    background-color: #fff;
-    border-color: #fff;
-}
-
- ul{
-    list-style: none;
-    float: right;
-    margin:4px 0px 0px 0px !important;}
-
-
-ul li
-{display: inline-block;}
-
-.spanlbl{font-size: 25px;
-    color: #357279;}
-
-    .card-header {
-        padding: 2px;
-        margin-bottom: 0;
-        border-bottom: 1px solid;
-        background-color: #fff;
-        border-color: #d8dbe0;
-    }
-
-    .mainContainer {
-        padding-top: 43px;
-        width: 80%;
-        float: right;
-        z-index: 1031;
-        position: absolute;
-        right: 0;
-    }
-
-
-    .popupposition{right: 0px;
-        position: absolute;
-        top: -28px;}
-    
-    .modal-body{height: 460px;}
-
-    .page-item.active .page-link {
-        z-index: 3;
-        color: #fff;
-        background-color: #0d5f69;
-        border-color: #0d5f69;
-    }
-
-
-    .page-link {
-        position: relative;
-        display: block;
-        padding: .5rem .75rem;
-        line-height: 1.25;
-        border: 1px solid;
-        color: #0d5f69;
-        background-color: #fff;
-        border-color: #3d767d;
-    }
+.card-footer {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    border-color: #ffffff;}
