--- a/src/app/Master/country/country.component.html
+++ b/src/app/Master/country/country.component.html
@@ -67,12 +67,12 @@
             <form action="" class="form-horizontal ng-untouched ng-pristine ng-valid" enctype="multipart/form-data" method="post" novalidate="">
                 
                 <div class="form-group row">
-                    <label class="col-md-3 col-form-label" for="text-input">Country Code</label>
-                    <div class="col-md-9"><input class="form-control" id="text-input" name="text-input" placeholder="" type="text" /></div>
+                    <label class="col-md-3 col-form-label" for="country code">Country Code</label>
+                    <div class="col-md-9"><input class="form-control form-control-sm" id="text-input" name="country code" placeholder="" type="text" /></div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-md-3 col-form-label" for="email-input">Country Name</label>
-                    <div class="col-md-9"><input autocomplete="email" class="form-control" id="email-input" name="email-input" placeholder="" type="email" /></div>
+                    <label class="col-md-3 col-form-label" for="country name">Country Name</label>
+                    <div class="col-md-9"><input class="form-control form-control-sm" id="email-input" name="country name" placeholder="" type="email" /></div>
                 </div>
                
                
