--- a/src/app/Master/state/state.component.html
+++ b/src/app/Master/state/state.component.html
@@ -67,11 +67,11 @@
                 
                 <div class="form-group row">
                     <label class="col-md-3 col-form-label" for="text-input">State Code</label>
-                    <div class="col-md-9"><input class="form-control" id="text-input" name="text-input" placeholder="" type="text" /></div>
+                    <div class="col-md-9"><input class="form-control form-control-sm" id="text-input" name="text-input" placeholder="" type="text" /></div>
                 </div>
                 <div class="form-group row">
                     <label class="col-md-3 col-form-label" for="email-input">State Name</label>
-                    <div class="col-md-9"><input autocomplete="email" class="form-control" id="email-input" name="email-input" placeholder="" type="email" /></div>
+                    <div class="col-md-9"><input autocomplete="email" class="form-control form-control-sm" id="email-input" name="email-input" placeholder="" type="email" /></div>
                 </div>
                
             
