--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="c-sidebar c-sidebar-dark c-sidebar-fixed c-sidebar-lg-show" id="sidebar">
   
   <ul class="c-sidebar-nav ps ps--active-y">
-  <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="/Dashboard">
+  <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/Dashboard">
     <span class="c-sidebar-nav-icon"> <i class="fa fa-tachometer " ></i></span>
    Dashboard</a></li>
   
@@ -11,9 +11,10 @@
     <i class="fa fa-cog" ></i>
   </span> Masters</a>
   <ul class="c-sidebar-nav-dropdown-items">
-    <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" > Country</a></li>
-  <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" > State</a></li>
-  <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"> City</a></li>
+    <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/Country" > Country</a></li>
+  <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/State"> State</a></li>
+  <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/City"> City</a></li>
+  <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" routerLink="/Location"> Location</a></li>
   <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"> Company</a></li>
   <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="#"> Designation</a></li>
   </ul>
