--- a/src/app/Master/country/country.component.html
+++ b/src/app/Master/country/country.component.html
@@ -81,7 +81,7 @@
             </form>
         </div>
         <div class="card-footer">
-            <button class="btn btn-sm btn-primary pull-right" type="submit"><i class="fa fa-floppy-o"></i> Save</button>
+            <button class="btn btn-sm btn-primary pull-right" type="submit" (click)="alertWithSuccess()"><i class="fa fa-floppy-o"></i> Save</button>
             
         </div>
     </div>
