--- a/src/app/Master/company/company.component.html
+++ b/src/app/Master/company/company.component.html
@@ -72,7 +72,8 @@
                 </div>
                 <div class="form-group row">
                     <label class="col-md-3 col-form-label" for="country name">Address</label>
-                    <div class="col-md-9"><textarea class="form-control form-control-sm" id="email-input" name="country name"  ></textarea></div>
+                    <div class="col-md-9" style="position: relative;"><textarea class="form-control form-control-sm" id="email-input" name="country name"  ></textarea></div>
+                    <i class="fa fa-plus-circle circlebtn" aria-hidden="true"></i>
                 </div>
                 <div class="form-group row">
                   <label class="col-md-3 col-form-label" for="country code">Phone No.</label>
